# kc_iot_gateway

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  README_zh.md  devices.docker.yaml  devices.yaml  docker-compose.yml  index.html  pyproject.toml  rules.yaml
.github/workflows/: ci.yml
ai_agent_skill/: SKILL.md
ai_agent_skill/scripts/: iot
assets/: index-CeT99Eut.css  index-DWTp45Yl.js
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AlertsPanel.tsx  DevicesPanel.tsx  RulesPanel.tsx  WebhookSimPanel.tsx
dashboard/src/hooks/: useDemoMode.ts  useLang.ts  useTheme.ts  useWebSocket.ts
dashboard/src/lib/: api.ts  i18n.ts
docs/: DESIGN.md
simulators/: modbus_simulator.py  mqtt_simulator.py
src/: __main__.py  api.py  cooldown.py  db.py  gateway.py  mcp_server.py  plugin_base.py  registry.py  rules.py
src/actions/: console.py  device_write.py  dispatcher.py  line_notify.py  telegram.py  webhook.py
src/plugins/: coap_plugin.py  modbus_plugin.py  mqtt_plugin.py  webhook_plugin.py
static/: index.html
static/assets/: index-B1c4wERK.js  index-BHPvdxoW.js  index-BnNZbz8p.js  index-C5jDnEXo.css
tests/: test_api.py  test_cooldown.py  test_db.py  test_registry.py  test_rules.py
